<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/getOutPlageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/getOutPlagebutton"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/getInPlageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/getInPlagebutton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/directionButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/directionButton"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/startStopButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/startStop"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/getOutAdrButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/getInOutAdr"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/is"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/is"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/deal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/deal"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/exchange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/exchange"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/inVV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inoutvv"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/contactvv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contactvv"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action"
        android:text="@string/otherAction"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelPrevions"
            android:id="@+id/cancelPrevious"
            />
        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/cameraicon"
            android:scaleType="fitXY"
            android:maxWidth="40dp"
            android:background="?android:attr/selectableItemBackground"
            />
    </LinearLayout>
</LinearLayout>